# mcp-table-editor

./: .gitignore  README.md  pyproject.toml
mcp_table_editor/editor/: __init__.py  _editor.py  _in_memory_editor.py  editor.py  range.py  selector.py
mcp_table_editor/handler/: __init__.py  _base_handler.py  _crud_handler.py  _insert_cell_handler.py  _sort_by_value_handler.py  _sort_handler.py  base_handler.py  crud.py  crud_handler.py  delete_content_handler.py  drop_content_handler.py  get_content_handler.py  insert_cell_handler.py  remove_content_handler.py  update_content_handler.py
mcp_table_editor/mcp/: handler_tool.py  server.py  web.py
mcp_table_editor/misc/: pandas_utils.py
mcp_table_editor/prompt/: example.py
tests/: test_editor_editor.py
tests/editor/: test_editor.py
tests/handlers/: test_crud.py  test_crud_derrived_handlers.py  test_handlers.py  test_sort_by_value_handler.py  test_sort_handler.py
tests/misc/: test_pandas_utils.py
