[project]
name = "mcp-table-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pandas>=2.2.3",
    "python-ulid>=3.0.0",
]

[dependency-groups]
dev = ["pandas-stubs>=2.2.3.250308", "pytest>=8.3.5", "pytest-cov>=6.1.1"]
